fix: (add footer   align-items: center; )

--- a/src/Footer/Footer.module.scss
+++ b/src/Footer/Footer.module.scss
@@ -8,6 +8,7 @@
 
   display: flex;
   justify-content: center;
+  align-items: center;
 
   .footerContainer {
     background-color: $textColorActive;
